# rust_citybuilder_game

./: BENCHMARKS.md  Cargo.toml  DIFFING_SYSTEM.md  INPUT_SYSTEM.md  LICENSE  MULTIPLE_ITERATORS.md  MULTIPLE_ITERATOR_PARAMETERS.md  README.md  TIME_MANAGEMENT.md  TUPLE_SYSTEMS.md  VARIABLE_ARITY_DOCS.md  grid_game_demo.html  todo.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: benchmarks.yml
benches/: debug_tracking_benchmarks.rs
legacy_to_remove/: grid_game.rs  web_grid_game.rs
src/: camera_refactoring_demo.rs  diffing.rs  diffing_demo.rs  diffing_test.rs  ecs.rs  ecs_clean.rs  ecs_example.rs  ecs_legacy.rs  ecs_new.rs  ecs_simple.rs  enhanced_http_server.rs  examples.rs  game_components.rs  game_renderer.rs  grid_game.rs  grid_game_components.rs  grid_game_systems.rs  http_server.rs  input_test.rs  lib.rs  main.rs  main_test.rs  math_demo.rs  multiple_iterator_systems_test.rs  multiple_iterators_test.rs  mut_demo.rs  player_movement_system.rs  query.rs  query_examples.rs  rendering_test.rs  system_dependency_test.rs  system_object_example.rs  time_demo.rs  tuple_systems_test.rs  web_ecs_game.rs  web_render_sample.rs
src/core/: hierarchy.rs  hierarchy_component.rs  hierarchy_system.rs  input_action.rs  input_system.rs  input_system_demo.rs  mod.rs  time.rs  time_system.rs
src/disabled_modules/: dependency_example.rs  diffing.rs  diffing_test.rs  hierarchy_demo.rs  input_demo.rs  main_test.rs  math_demo.rs  multiple_iterator_systems_test.rs  replay_test.rs  system_dependency_test.rs  (+1 more)
web/: README.md  game-template.html  index.html
(+21 files in other folders)
